--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,17 @@
+Version 2.0.6
+Added
+Avaritia Furnace
+Avaritia:Reforged
+CodeChicken Lib 1.8+
+Ender Storage 1.8+
+FTB Essentials
+Passive Endermen
+
+Removed
+EnderChests
+EnderTanks
+Nutritional Balance
+
 Version 2.0.5
 Added
 Connectivity
