--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+Version 2.0.7
+Added
+Anti Mob Griefing
+Easy Mob Farm
+Easy Piglins
+Easy Villagers
+LaserIO
+Removed
+Passive Endermen
+
+
 Version 2.0.6
 Added
 Avaritia Furnace
