--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+Version 2.0.8
+Updated A bunch of Mods
+Updated Forge to 40.1.54
+Removed
+Advent of Ascension (hopefully temporarily)
+
 Version 2.0.7
 Added
 Anti Mob Griefing
