--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+Version 2.0.9
+Added (back)
+Majrusz Library
+Majrusz's Difficulty
+Updated a bunch of Mods
+
 Version 2.0.8
 Updated A bunch of Mods
 Updated Forge to 40.1.54
