--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+Version 2.1.3
+Recipe & Config Changes:
+Adjusted extended crafting table recipes
+removed (and hid) the cyclic uncrafter
+Adjusted quests to reflect Industrial Foregoing related quests
+Added:
+Powah
+Removed:
+Industrial Foregoing
+Updated:
+Forge to 40.1.80
+A bunch of mods
+
 Version 2.1.2
 Recipes & Config Changes:
 Adjusted some Sophisticated Backpacks recipes (for upgrades)
