--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+Version 2.1.4
+Recipe & Config Changes:
+Cleaned up cobblegenrandomizer a bit
+increased the weight of iron from the cobblegenrandomizer
+increased the cooldown of apotheosis boss spawns
+Removed:
+Nuclear Science
+Updated:
+Forge to 40.1.86
+A bunch of mods
+
 Version 2.1.3
 Recipe & Config Changes:
 Adjusted extended crafting table recipes
