--- a/changelog.txt
+++ b/changelog.txt
@@ -65,6 +65,18 @@ Better Compatability Checker
 Butcher's Delight Foods
 Sneaky Tree Growing
 Wooden Bucket
+Pam's Harvestcraft & related
 
 Mods Removed
 Squat Grow
+Farmer's Delight & related
+
+3.0.7
+Mods Added
+Compressed Creativity
+Embers Rekindled
+
+Mods Removed
+Giacomo's Fishing Net
+DankStorage
+More Red
